added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -29,7 +30,14 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li> Enter your CSS notes here.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>The style element makes it possible to embed an entire stylesheet directly in the HTML file.</li>
+          <li>The link element can be used to place or link files with an external style sheet i.e HTML.</li>
+          <li>The declration function contains two important components {CSS property:property value} e.g. {color:blue}</li>
+          <li>The [img] selector assigns property values to any image element in the markup.</li>
+          <li>The display property is assigned with the block value, which assigns each image to start on a new line.</li>
+          <li>The card function allows us to style each class sector.</li>
         </ul>
 
       </section>
